--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
+    "dev": "vite",
     "build": "vite build",
-    "dev": "vite"
+    "dev:desktop": "tauri dev",
+    "build:desktop": "tauri build",
+    "tauri": "tauri"
   },
   "dependencies": {
     "@emotion/react": "11.14.0",
@@ -67,6 +70,7 @@
   },
   "devDependencies": {
     "@tailwindcss/vite": "4.1.12",
+    "@tauri-apps/cli": "^2.10.0",
     "@vitejs/plugin-react": "4.7.0",
     "tailwindcss": "4.1.12",
     "vite": "6.4.1"
