--- a/package.json
+++ b/package.json
@@ -66,7 +66,9 @@
     "sonner": "2.0.3",
     "tailwind-merge": "3.2.0",
     "tw-animate-css": "1.3.8",
-    "vaul": "1.1.2"
+    "vaul": "1.1.2",
+    "@tauri-apps/plugin-dialog": "2",
+    "@tauri-apps/plugin-fs": "2"
   },
   "devDependencies": {
     "@tailwindcss/vite": "4.1.12",
